--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.31.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "event-source-polyfill": "^1.0.31",
     "lucide-react": "^0.359.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +32,7 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
